--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <td><a href="https://devdocs.io/" target="_blank"> devdocs.io</a> </td>
     </tr>
     <tr>
-      <th scope="row">GitHub Repo </th>
-      <td> Link here </td>
+      <th scope="row">GitHub Repo</th>
+      <td><a href="https://github.com/Mmorris1334/MallorysWebDevPortfolio" target="_blank"></td>
     </tr>
      <tr>
       <th scope="row">CodePen Username</th>
